[BGPT] Force render surface for 3d object flattening its subtree

For non-BGPT, this is done in PropertyTreeBuilder
(https://cs.chromium.org/chromium/src/cc/trees/property_tree_builder.cc?rcl=bc9284e61af53205eaff36b747f0f7c99281aa3c [formerly 929c1eea7c58e4d656a57837e6161c88d79cbec8]&l=809)
by forcing render surface via a cc effect node.

Now do the same for BGPT.

Bug: 879605
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ia1f61f27a04c0d0feaf67911767c7d1ea06cb9c5
Reviewed-on: https://chromium-review.googlesource.com/1224598
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591596}
Former-commit-id: 1dedda961f7fbde6f069fe0a3b0d82193c2bfa5a